--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    --><script src="https://kit.fontawesome.com/a62dfa2412.js" crossorigin="anonymous"></script>
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto+Slab&family=Lato&family=Merriweather&family=Montserrat&display=swap" rel="stylesheet">
   <link rel="manifest" href="./manifest.json" />
   <script src="https://cdn.tailwindcss.com"></script>
 
